---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: ????
  Features:
    - Burnable fuels now kind of work. Not all machines that can burn are currently being grabbed. To be refined
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2024-05-18
  Bugfixes:
    - Now has a pcall so it should just log an error instead of halting startup
    - Should now gracefully handle recipes that can't be unlocked (at least via research)
    - Added MoreSciencePacks-for1_1 as a hidden dependency so it properly considers the added science
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2024-05-17
  Features:
    - Add setting to define what items gets their tiers calculated
    - Add setting to directly set values as base items
    - Add setting to ignore problematic recipes
  Bugfixes:
    - Properly determine if a recipe is enabled by default
    - Output to log instead of only stdout
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2024-05-12
  Major Features:
    - Mostly kind of works now!